aws/Oct-23-2023/terraform-manifests/c5-ec2instance.tf
#EC2 Instance

resource "aws_instance" "myec2vm" {
  ami = data.aws_ami.amzlinux2.id
  instance_type = var.instance_type
  key_name = var.instance_keypair
  vpc_security_group_ids = [aws_security_group.vpc-ssh, aws_security_group.vpc-web]
  tags = {
    "Name"= "EC2 Demo"
  }
}
